--- a/settings/settings.html
+++ b/settings/settings.html
@@ -1,10 +1,10 @@
 <div class="form-group">
-    <label class="col-sm-3 control-label" for="user">{{__('user')}}</label>
+    <label class="col-sm-3 control-label" for="user">{{__('latex')}}</label>
 
     <div class="col-sm-9">
         <input id="user" class="form-control"
-               ng-model="settings.user"
-               placeholder="{{__('user')}}">
-        <span class="help-block m-b-none" ng-bind-html="__('user_info')"></span>
+               ng-model="settings.latex"
+               placeholder="{{__('latex')}}">
+        <span class="help-block m-b-none" ng-bind-html="__('latex_info')"></span>
     </div>
 </div>
