fix display: block

--- a/content/content.html
+++ b/content/content.html
@@ -1,7 +1,7 @@
 <link rel="import" ng-href="{{base_url}}/assets/math-tex.html">
 
 <div class="text-center">
-	<code is="math-tex" style="display: inline-blick; font-size: 3em;">
+	<code is="math-tex" style="display: block; font-size: 3em;">
 		{{settings.latex}}
 	</code>
 </div>
